# u-ansible-setup-workstation

./: .aiignore  .ansible-lint.yaml  .gitignore  CHANGELOG  LICENSE  README.ai.md  README.es.md  README.md  SECURITY.md  ansible.cfg  ansible_best_practices.md  changelog.md  model_card.md  pyproject.toml  skills.md  vault.example.yml
docs/rules/: 35500.md  35501.md  35502.md  35503.md  35504.md  35505.md  35506.md  35507.md  35508.md  35509.md  35510.md  35511.md  35512.md  35513.md  35514.md  35515.md  35516.md  35517.md  35518.md  35519.md  35520.md  35521.md  35522.md  35523.md  35524.md  35525.md  35526.md  35527.md  35528.md  35529.md  35530.md  35531.md  35532.md  35533.md  35534.md  35535.md  35536.md  35537.md  35538.md  35539.md  (+239 more)
group_vars/all/: vault.example.yml
inventory/: inventory.example  inventory.ini.example
playbooks/: remove_bloatware_packages.yaml  remove_unused_accounts_groups.yaml  setup_workstation.yaml  shutdown.yaml  update_upgrade.yaml
prompts/: README.ai.md  ansible_best_practices.md  model_card.md  prompt.md  skills.md
roles/apparmor_enforce/: README.md
roles/configure_bootloader_access/: README.md
roles/configure_chrony/: README.md
roles/configure_chrony_user/: README.md
roles/configure_cron_d_permissions/: README.md
roles/configure_cron_daily_permissions/: README.md
roles/configure_cron_hourly_permissions/: README.md
roles/configure_cron_monthly_permissions/: README.md
roles/configure_cron_weekly_permissions/: README.md
roles/configure_crontab_permissions/: README.md
roles/configure_etc_issue_access/: README.md
(+879 files in other folders)
